# xvault

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/worflows/: ci.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/engine/: chunk.rs  device.rs  error.rs  mod.rs  utils.rs  volume.rs  xfile.rs
src/schema/: chunk.rs  device.rs  file.rs  mod.rs  volume.rs  xfile.rs
tests/: chunk.rs  device.rs  engine.rs  utils.rs  volume.rs  xfile.rs
xvault/: .gitignore  Cargo.toml  build.rs
xvault/src/: lib.rs  main.rs
xvault/src/engine/: error.rs  xfile.rs
xvault/tests/: device.rs  utils.rs
