[package]
name = "RootFS"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
    "v5",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.bincode]
version = "2.0.1"
features = [
    "serde"
]

[dev-dependencies]
similar = "2.7.0"