[package]
name = "xvault"
edition = "2024"
version = "0.1.1"
license = "GPL-3.0-or-later"
authors = ["Antonio Ricciardi <dev.roothunter@gmail.com>"]
repository = "https://github.com/root-hunter/xvault"
categories = [
    "filesystem",
    "distributed-systems",
    "data-structures",
    "encoding",
]
keywords = [
    "distributed",
    "filesystem",
    "chunks",
    "redundancy",
    "rust",
]

[dependencies]
reed-solomon-simd = "^3.0"
uuid = { version = "^1.13", features = ["v4", "v5"] }

serde = { version = "^1.0", features = ["derive"] }
bincode = { version = "^2.0", features = ["serde"] }

[build-dependencies]
walkdir = "^2.5"

[dev-dependencies]
rand = "^0.9"